hide button in header menus on mobile and make sure submenus are visible, style member menu on mobile like the main menu

--- a/src/scss/base/_utilities.scss
+++ b/src/scss/base/_utilities.scss
@@ -80,7 +80,7 @@
 	margin: 0 auto;
 }
 
-.hide-screen {
+.hide-desktop {
 	@include breakpoint(desktop) {
 		display: none;
 	}
